# DNALLM

./: .continue-here.md  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .uv.toml  404.html  CHANGELOG.md  CLAUDE.md  CLI_USAGE.md  CONTRIBUTING.md  DOCS_CODE_CHECK_REPORT.md  DOCS_CODE_DETAILED_CHECK.md  DOCS_CODE_VERIFICATION_REPORT.md  DOCS_IMPROVEMENTS_SUMMARY.md  DOCS_REVISION_PLAN.md  LICENSE  LOGGING_MIGRATION_GUIDE.md  MANUAL_FIX_REQUIRED.md  Makefile  README.md  README_zh.md  RELEASE_CHECKLIST.md  RUFF_USAGE.md  TEST_CODE_PLAN.md  TEST_EXECUTION_LOG.md  benchmark_model_config.yaml  conftest.py  dnamamba_modelscope_config.yaml  evaluation_report.json  index.html  install_deps.sh  main.py  mkdocs.yml  mkdocs_venv.sh  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  run_cli.py  (+5 more)
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml  deploy-to-gh-pages.yml  docs-validation.yml  publish.yml
.planning/: HANDOFF.json
.serena/: project.yml
VERIFICATION_REPORT/: index.html
api/: index.html
api/changeme/: index.html
cli/: cli.py  config_generator.py  inference.py  model_config_generator.py  predict.py  train.py
cli/examples/: generated_benchmark_config.yaml  generated_finetune_config.yaml
concepts/benchmark/: index.html
concepts/changeme/: index.html
concepts/evaluation/: index.html
concepts/inference/: index.html
concepts/mcp/: index.html
concepts/model_architecture/: index.html
concepts/training/: index.html
configs/: finetune_config.yaml  inference_config.yaml  ner_config.yaml
datasets/: README.md  data.py
dnallm/: __init__.py
dnallm/cli/: __init__.py  cli.py  config_generator.py  inference.py  model_config_generator.py  mutagenesis.py  predict.py  train.py
dnallm/configuration/: __init__.py  configs.py
dnallm/datahandling/: README.md  __init__.py  data.py  dataset_auto.py
dnallm/datasets/: __init__.py  data.py  dataset_auto.py
dnallm/finetune/: __init__.py  config.py  data.py  megatron.py  tasks.py  trainer.py
dnallm/gradio/: README.md  config_generator_app.py
dnallm/inference/: __init__.py  benchmark.py  config.py  inference.py  interpret.py  mutagenesis.py  plot.py  predictor.py  utils.py
dnallm/mcp/: API_DOCUMENTATION.md  DEVELOPMENT.md  DOCUMENTATION.md  FINAL_STATUS.md  IMPLEMENTATION_LOG.md  MODEL_LOADING_TEST_REPORT.md  PROGRESS_REPORT.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SSE_GUIDE.md  TESTING_UPDATE.md  TEST_RESULTS.md  __init__.py  client.py  config_manager.py  config_validators.py  dna_predictor_adapter.py  example_sse_usage.py  example_usage.py  mcp_server.py  mcp_server_plan.md  model_config_generator.py  model_manager.py  model_pool_manager.py  protocol_handler.py  pytest.ini  requirements.txt  run_real_model_tests.py  run_server.py  run_tests.py  server.py  sse_manager.py  start_server.py  task_router.py  test_dna_predictor.py  test_import.py  test_mcp_curl.md  test_mcp_functionality.py  (+4 more)
dnallm/models/: __init__.py  head.py  losses.py  model.py  model_info.yaml  modeling_auto.py  tokenizer.py
dnallm/tasks/: metrics.py  task.py  tasks.py
dnallm/ui/: README.md  run_config_app.py
dnallm/utils/: __init__.py  logger.py  sequence.py  support.py  training_plots.py
docs/: GLOSSARY.md  I18N_GUIDE.md  VERIFICATION_REPORT.md  index.md  index.zh.md
docs/api/: index.md  utils.md
docs/case_studies/: motif_detection.md  promoter_prediction.md  sequence_generation.md
docs/cli/: config_generator.md  index.md  mcp_server.md  usage.md
docs/concepts/: inference.md  mcp.md  training.md
docs/example/: mcp_langchain.md  mcp_pydantic_ai.md
docs/faq/: benchmark_troubleshooting.md  cli_troubleshooting.md  data_processing_troubleshooting.md  finetuning_troubleshooting.md  index.md  inference_troubleshooting.md  install_troubleshooting.md  mcp_troubleshooting.md  models_troubleshooting.md
docs/getting_started/: installation.md  installation.zh.md  installation_zh.md  quick_start.md  quick_start.zh.md
docs/mcp/: startserver.md  usage.md
docs/resources/: datahandling.md  datahandling_zh.md  datasets.md  datasets_zh.md  model_selection.md  model_zoo.md  troubleshooting_models.md
docs/user_guide/: best_practices.md  common_workflows.md  getting_started.md  models.md  performance_guide.md  troubleshooting.md
example/: README.md  finetune_classification.py  finetune_dnabert.py  finetune_plant_dna.py  inference_example.py  mcp_inference_example.py
example/marimo/: 01_quickstart.py  02_dnabert_finetuning.py
example/mcp_example/: mcp_client_ollama_langchain_agents.ipynb  mcp_client_ollama_pydantic_ai.ipynb
example/mcp_langchain/: index.html
example/mcp_pydantic_ai/: index.html
example/notebooks/: embedding_attention.ipynb
faq/: index.html
faq/benchmark_troubleshooting/: index.html
faq/cli_troubleshooting/: index.html
faq/data_processing_troubleshooting/: index.html
faq/faq/: index.html
faq/finetuning_troubleshooting/: index.html
faq/inference_troubleshooting/: index.html
faq/install_troubleshooting/: index.html
faq/mcp_troubleshooting/: index.html
faq/models_troubleshooting/: index.html
figures/: figure4a.ipynb  figure4a_2.ipynb
figures/Figure3/: figure3c.ipynb  figure3d.ipynb  figure3f.ipynb  figure3g.ipynb  figure3h.ipynb  figure3i.ipynb  finetune_config.yaml
results/: test_results.json
scripts/: check_code.bat  check_code.py  check_code.sh  check_code_quality.sh  check_docs_code.py  check_docs_sync.py  check_notebook_md_sync.py  ci_checks.sh  doc_mocks.py  finetune_mamba2_megatron.py  generate_md_from_marimo.py  generate_md_from_notebook.py  infer_mamba2_megatron.py  inference_mamba2_npu.py  install_mamba.sh  manage_manual_fixes.sh  publish.sh  setup_uv.sh  validate_docs_snippets.py  validate_yaml.py  verify_docs.py
search/: search_index.json
site/: 404.html  objects.inv
tests/: TESTING.md  conftest.py  pytest.ini  test_data.py  test_trainer.py
tests/finetune/: README.md  (+11 more)
ui/: README.md  generation_task_app.py  inference_config.yaml  model_config_generator_app.py  requirements.txt  run_config_app.py
(+645 files in other folders)
