[project]
name = "dnallm"
version = "0.2.0"
description = "A toolkit for fine-tuning and inference with DNA Language Models"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Zhangtaolab", email = "your.email@zhangtaolab.org"}
]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "accelerate>=1.4.0",
    "addict>=2.4.0",
    "altair[all]>=5.5.0",
    "colorama>=0.4.6",
    "datasets<=3.2.0",
    "einops>=0.7.0",
    "evaluate>=0.4.3",
    "huggingface-hub>=0.29.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8",
    "aiohttp>=3.9.0",
    "jax>=0.5.2",
    "loguru>=0.7.0",
    "mambapy>=1.2.0",
    "mcp>=1.3.0",
    "modelscope[framework]>=1.23.2",
    "nbstripout>=0.8.1",
    "ninja>1",
    "numpy<2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.15.2",
    "sentencepiece>=0.2.0",
    "seqeval>=1.2.2",
    "tensorboardx>=2.6.2.2",
    "tokenizers>=0.21.0",
    "torch>=2.4.0,<2.7",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "umap-learn>=0.5.7",
    "uvicorn>=0.24.0",
    "wandb>=0.19.8",
    "websockets>=12.0",
    "wheel>=0.45.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.2",
    "ipywidgets>=8",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "marimo>=0.11.17",
    "mypy>=1.15.0",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=6.0.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=6.0.0",
]
notebook = [
    "ipywidgets>=8",
    "jupyter>=1.1.1",
    "marimo>=0.11.17",
]
docs = [
    "mkdocs-material>=9.6.1",
    "mkdocstrings-python>=1.16.10",
]
mcp = [
    "mcp>=1.3.0",
    "asyncio>=3.4.3",
]
base = [
    "asyncio>=3.4.3",
    "black>=25.1.0",
    "flake8>=7.1.2",
    "ipywidgets>=8",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "marimo>=0.12.1",
    "mcp>=1.3.0",
    "mypy>=1.15.0",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]
cpu = [
    "torch>=2.4.0,<2.7",
]
cuda121 = [
    "torch>=2.2.0,<2.7",
]
cuda124 = [
    "torch>=2.4.0,<2.7",
]
cuda126 = [
    "torch>=2.6.0,<2.7",
]
cuda128 = [
    "torch>=2.7.0",
]
rocm = [
    "torch>=2.5.0,<2.7",
]
mamba = [
    "mamba-ssm==2.2.4",
    "causal_conv1d==1.5.0.post8",
]

#mamba = [
#    "mamba-ssm>=2.2",
#    "causal_conv1d>=1.4",
#]


[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
explicit = true

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-cuda121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "torch-cuda124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "torch-cuda126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "torch-cuda128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "torch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2"
explicit = true

[tool.uv.sources]
torch = [
  { index = "torch-cpu", extra = "cpu" },
  { index = "torch-cuda121", extra = "cuda121" },
  { index = "torch-cuda124", extra = "cuda124" },
  { index = "torch-cuda126", extra = "cuda126" },
  { index = "torch-cuda128", extra = "cuda128" },
#   { index = "torch-rocm", extra = "rocm" },
]

[tool.uv]
conflicts = [
  [ { extra = "cpu" }, { extra = "cuda121" } ],
  [ { extra = "cpu" }, { extra = "cuda124" } ],
  [ { extra = "cpu" }, { extra = "cuda126" } ],
  [ { extra = "cpu" }, { extra = "cuda128" } ],
#   [ { extra = "cpu" }, { extra = "rocm" } ],
  [ { extra = "cuda121" }, { extra = "cuda124" } ],
  [ { extra = "cuda121" }, { extra = "cuda126" } ],
  [ { extra = "cuda121" }, { extra = "cuda128" } ],
  [ { extra = "cuda124" }, { extra = "cuda126" } ],
  [ { extra = "cuda124" }, { extra = "cuda128" } ],
  [ { extra = "cuda126" }, { extra = "cuda128" } ],
#   [ { extra = "cuda121" }, { extra = "rocm" } ],
#   [ { extra = "cuda124" }, { extra = "rocm" } ],
#   [ { extra = "cuda126" }, { extra = "rocm" } ],
]

[tool.setuptools.packages.find]
include = ["dnallm*"]

[tool.setuptools.package-data]
"dnallm" = ["*.yaml", "*.yml", "*.json"]

[project.scripts]
dnallm = "cli.cli:main"
dnallm-train = "cli.train:main"
dnallm-predict = "cli.predict:main"
dnallm-model-config-generator = "cli.model_config_generator:main"
dnallm-mcp-server = "dnallm.mcp.server:main"
