[project]
name = "dnallm"
version = "0.3.0"
description = "A comprehensive toolkit for fine-tuning and inference with DNA Language Models"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["dna", "language-model", "bioinformatics", "machine-learning", "genomics"]
homepage = "https://github.com/zhangtaolab/DNALLM"
repository = "https://github.com/zhangtaolab/DNALLM"
documentation = "https://zhangtaolab.github.io/DNALLM/"
authors = [
    {name = "Zhangtaolab", email = "forrest_zhang@163.com"}
]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "accelerate>=1.4.0",
    "addict>=2.4.0",
    "altair[all]>=5.5.0",
    "colorama>=0.4.6",
    "datasets<=3.2.0",
    "einops>=0.7.0",
    "evaluate>=0.4.3",
    "huggingface-hub>=0.29.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8",
    "aiohttp>=3.9.0",
    "jax>=0.5.2",
    "loguru>=0.7.0",
    "mambapy>=1.2.0",
    "mcp>=1.3.0",
    "modelscope[framework]>=1.23.2",
    "nbstripout>=0.8.1",
    "ninja>1",
    "numpy<2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.15.2",
    "sentencepiece>=0.2.0",
    "seqeval>=1.2.2",
    "tensorboardx>=2.6.2.2",
    "tokenizers>=0.21.0",
    "torch>=2.4.0,<2.7",
    "tqdm>=4.67.1",
    "transformers>=4.49.0,<4.56.0",
    "umap-learn>=0.5.7",
    "uvicorn>=0.24.0",
    "wandb>=0.19.8",
    "websockets>=12.0",
    "wheel>=0.45.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.12",
    "pre-commit>=3.6.0",
    "ipywidgets>=8",
    "jupyter>=1.1.1",
    "marimo>=0.11.17",
    "mypy>=1.15.0",
    "pandas-stubs>=2.3.0",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=6.0.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=6.0.0",
]
notebook = [
    "ipywidgets>=8",
    "jupyter>=1.1.1",
    "marimo>=0.11.17",
]
docs = [
    "mkdocs-material>=9.6.1",
    "mkdocstrings-python>=1.16.10",
]
mcp = [
    "mcp>=1.3.0",
    "asyncio>=3.4.3",
]
base = [
    "asyncio>=3.4.3",
    "ruff>=0.1.12",
    "ipywidgets>=8",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "marimo>=0.12.1",
    "mcp>=1.3.0",
    "mypy>=1.15.0",
    "pandas-stubs>=2.3.0",
    "pydantic>=2.10.6",
    "types-transformers>=0.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]
cpu = [
    "torch>=2.4.0,<2.7",
]
cuda121 = [
    "torch>=2.2.0,<2.7",
]
cuda124 = [
    "torch>=2.4.0,<2.7",
]
cuda126 = [
    "torch>=2.6.0,<2.7",
]
cuda128 = [
    "torch>=2.7.0",
]
rocm = [
    "torch>=2.5.0,<2.7",
]
mamba = [
    "mamba-ssm==2.2.4",
    "causal_conv1d==1.5.0.post8",
]

#mamba = [
#    "mamba-ssm>=2.2",
#    "causal_conv1d>=1.4",
#]


[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
explicit = true

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-cuda121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "torch-cuda124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "torch-cuda126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "torch-cuda128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "torch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2"
explicit = true

[tool.uv.sources]
torch = [
  { index = "torch-cpu", extra = "cpu" },
  { index = "torch-cuda121", extra = "cuda121" },
  { index = "torch-cuda124", extra = "cuda124" },
  { index = "torch-cuda126", extra = "cuda126" },
  { index = "torch-cuda128", extra = "cuda128" },
#   { index = "torch-rocm", extra = "rocm" },
]

[tool.uv]
conflicts = [
  [ { extra = "cpu" }, { extra = "cuda121" } ],
  [ { extra = "cpu" }, { extra = "cuda124" } ],
  [ { extra = "cpu" }, { extra = "cuda126" } ],
  [ { extra = "cpu" }, { extra = "cuda128" } ],
#   [ { extra = "cpu" }, { extra = "rocm" } ],
  [ { extra = "cuda121" }, { extra = "cuda124" } ],
  [ { extra = "cuda121" }, { extra = "cuda126" } ],
  [ { extra = "cuda121" }, { extra = "cuda128" } ],
  [ { extra = "cuda124" }, { extra = "cuda126" } ],
  [ { extra = "cuda124" }, { extra = "cuda128" } ],
  [ { extra = "cuda126" }, { extra = "cuda128" } ],
#   [ { extra = "cuda121" }, { extra = "rocm" } ],
#   [ { extra = "cuda124" }, { extra = "rocm" } ],
#   [ { extra = "cuda126" }, { extra = "rocm" } ],
]

[tool.setuptools.packages.find]
include = ["dnallm*"]

[tool.setuptools.package-data]
"dnallm" = ["*.yaml", "*.yml", "*.json"]

[project.scripts]
dnallm = "dnallm.cli.cli:cli"
dnallm-train = "cli.train:main"
dnallm-predict = "cli.predict:main"
dnallm-model-config-generator = "cli.model_config_generator:main"
dnallm-mcp-server = "dnallm.mcp.server:main"

# Ruff configuration
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "example",
    "site",
    "htmlcov",
    "*.egg-info",
]

# Same as Black.
line-length = 79
indent-width = 4

# Assume Python 3.10+
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "E4",   # pycodestyle errors
    "E7",   # pycodestyle errors
    "E9",   # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RUF",  # Ruff-specific rules
]

ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "S101",  # use of assert detected
    "T201",  # print found
    "T203",  # pprint found
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*.py" = [
    "S101",  # assert
    "S106",  # hardcoded password
    "S108",  # hardcoded temp file
    "PLR2004",  # magic value
    "TID252",  # relative imports
    "F401",  # unused imports
    "F403",  # star imports
    "F841",  # unused variables
]

# Allow magic values in default arguments
"**/migrations/*.py" = ["PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["dnallm"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
