[project]
name = "dnallm"
version = "0.3.0"
description = "A comprehensive toolkit for fine-tuning and inference with DNA Language Models"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["dna", "language-model", "bioinformatics", "machine-learning", "genomics"]
authors = [
    {name = "Zhangtaolab", email = "forrest_zhang@163.com"}
]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "accelerate>=1.4.0",
    "addict>=2.4.0",
    "altair[all]>=5.5.0",
    "captum>=0.7.0",
    "colorama>=0.4.6",
    "datasets<=3.2.0",
    "einops>=0.7.0",
    "evaluate>=0.4.3",
    "huggingface-hub>=0.29.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8",
    "aiohttp>=3.9.0",
    "jax>=0.5.2",
    "loguru>=0.7.0",
    "mambapy>=1.2.0",
    "mcp>=1.3.0",
    "modelscope[framework]>=1.23.2",
    "nbstripout>=0.8.1",
    "ninja>1",
    "numpy<2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.15.2",
    "sentencepiece>=0.2.0",
    "seqeval>=1.2.2",
    "starlette>=0.40.0,<0.48.0",
    "tensorboardx>=2.6.2.2",
    "tokenizers>=0.21.0",
    "torch>=2.4.0,<2.7",
    "tqdm>=4.67.1",
    "transformers>=4.49.0,<4.56.0",
    "umap-learn>=0.5.7",
    "uvicorn>=0.24.0",
    "wandb>=0.19.8",
    "websockets>=12.0",
    "wheel>=0.45.0",
]

[project.urls]
Homepage = "https://github.com/zhangtaolab/DNALLM"
Repository = "https://github.com/zhangtaolab/DNALLM"
Documentation = "https://zhangtaolab.github.io/DNALLM/"
"Bug Tracker" = "https://github.com/zhangtaolab/DNALLM/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.12",
    "flake8>=7.0.0",
    "pre-commit>=3.6.0",
    "ipywidgets>=8",
    "jupyter>=1.1.1",
    "marimo<=0.14.17",
    "mypy>=1.15.0",
    "pandas-stubs>=2.3.0",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=6.0.0",
    "pytest-progress>=0.1.0",
    "pytest-timeout>=2.3.1",
]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=6.0.0",
    "pytest-progress>=0.1.0",
    "pytest-timeout>=2.3.1",
]
notebook = [
    "ipywidgets>=8",
    "jupyter>=1.1.1",
    "marimo<=0.14.17",
]
docs = [
    "mkdocs-material>=9.6.1",
    "mkdocstrings-python>=1.16.10",
    "click<8.2.2",
]
mcp = [
    "mcp>=1.3.0",
    "asyncio>=3.4.3",
]
base = [
    "asyncio>=3.4.3",
    "ruff>=0.1.12",
    "flake8>=7.0.0",
    "ipywidgets>=8",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "marimo<=0.14.17",
    "mcp>=1.3.0",
    "mypy>=1.15.0",
    "pandas-stubs>=2.3.0",
    "pydantic>=2.10.6",
    "types-transformers>=0.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-progress>=0.1.0",
]
cpu = [
    "torch>=2.4.0,<2.7",
]
cuda121 = [
    "torch>=2.2.0,<2.7",
]
cuda124 = [
    "torch>=2.4.0,<2.7",
]
cuda126 = [
    "torch>=2.6.0,<=2.7",
]
cuda128 = [
    "torch>=2.7.0",
]
rocm = [
    "torch>=2.5.0,<2.7",
]
mamba = [
    "causal_conv1d==1.5.0.post8",
    "mamba-ssm==2.2.4",
    "torch>=2.4.0,<=2.7",
]

#mamba = [
#    "mamba-ssm>=2.2",
#    "causal_conv1d>=1.4",
#]


[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
explicit = true

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-cuda121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "torch-cuda124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "torch-cuda126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "torch-cuda128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "torch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2"
explicit = true

[tool.uv.sources]
torch = [
  { index = "torch-cpu", extra = "cpu" },
  { index = "torch-cuda121", extra = "cuda121" },
  { index = "torch-cuda124", extra = "cuda124" },
  { index = "torch-cuda126", extra = "cuda126" },
  { index = "torch-cuda128", extra = "cuda128" },
#   { index = "torch-rocm", extra = "rocm" },
]

[tool.uv]
conflicts = [
  [ { extra = "cpu" }, { extra = "cuda121" } ],
  [ { extra = "cpu" }, { extra = "cuda124" } ],
  [ { extra = "cpu" }, { extra = "cuda126" } ],
  [ { extra = "cpu" }, { extra = "cuda128" } ],
#   [ { extra = "cpu" }, { extra = "rocm" } ],
  [ { extra = "cuda121" }, { extra = "cuda124" } ],
  [ { extra = "cuda121" }, { extra = "cuda126" } ],
  [ { extra = "cuda121" }, { extra = "cuda128" } ],
  [ { extra = "cuda124" }, { extra = "cuda126" } ],
  [ { extra = "cuda124" }, { extra = "cuda128" } ],
  [ { extra = "cuda126" }, { extra = "cuda128" } ],
#   [ { extra = "cuda121" }, { extra = "rocm" } ],
#   [ { extra = "cuda124" }, { extra = "rocm" } ],
#   [ { extra = "cuda126" }, { extra = "rocm" } ],
]

[tool.setuptools.packages.find]
include = ["dnallm*"]

[tool.setuptools.package-data]
"dnallm" = ["*.yaml", "*.yml", "*.json"]

[project.scripts]
dnallm = "dnallm.cli.cli:cli"
dnallm-train = "cli.train:main"
dnallm-inference = "cli.inference:main"
dnallm-model-config-generator = "cli.model_config_generator:main"
dnallm-mcp-server = "dnallm.mcp.server:main"

# Ruff configuration
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "example",
    "site",
    "htmlcov",
    "*.egg-info",
    "dnallm/tasks/metrics/",
]

# Same as Black.
line-length = 79
indent-width = 4

# Assume Python 3.10+
target-version = "py310"

# Enable preview features
preview = true

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "E4",   # pycodestyle errors
    "E7",   # pycodestyle errors
    "E9",   # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RUF",  # Ruff-specific rules
]

ignore = [
    "T201",  # print found
    "T203",  # pprint found
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*.py" = [
    "S101",  # assert
    "S106",  # hardcoded password
    "S108",  # hardcoded temp file
    "PLR2004",  # magic value
    "TID252",  # relative imports
    "F401",  # unused imports
    "F403",  # star imports
    "F841",  # unused variables
]
"**/tests/**/*.py" = [
    "S101",  # assert
    "S106",  # hardcoded password
    "S108",  # hardcoded temp file
    "PLR2004",  # magic value
    "TID252",  # relative imports
    "F401",  # unused imports
    "F403",  # star imports
    "F841",  # unused variables
]

# Allow magic values in default arguments
"**/migrations/*.py" = ["PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["dnallm"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "datasets.*",
    "altair.*",
    "umap.*",
    "wandb.*",
    "modelscope.*",
    "mcp.*",
    "peft.*",
    "accelerate.*",
    "evaluate.*",
    "seqeval.*",
    "tensorboardx.*",
    "tokenizers.*",
    "sentencepiece.*",
    "einops.*",
    "loguru.*",
    "rich.*",
    "colorama.*",
    "tqdm.*",
    "websockets.*",
    "uvicorn.*",
    "aiohttp.*",
    "jax.*",
    "mambapy.*",
    "ninja.*",
    "openpyxl.*",
    "scipy.*",
    "sklearn.*",
    "sklearn.*.*",
    "scikit_learn.*",
    "scikit_learn.*.*",
    "pandas.*",
    "numpy.*",
    "torch.*",
    "torch.*.*",
    "torchvision.*",
    "torchaudio.*",
    "huggingface_hub.*",
    "addict.*",
    "pydantic.*",
    "pydantic.*.*",
    "python_dotenv.*",
    "yaml.*",
    "PyYAML.*",
    "ipykernel.*",
    "ipywidgets.*",
    "jupyter.*",
    "marimo.*",
    "nbstripout.*",
    "mamba_ssm.*",
    "causal_conv1d.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests", "dnallm/mcp/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--asyncio-mode=auto",
    "--timeout=300"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "pdf: marks tests that generate PDF files",
    "performance: marks performance-related tests",
    "integration: marks integration tests",
    "unit: marks unit tests",
    "inference: marks inference-related tests",
    "utils: marks utility function tests",
    "data: marks data handling tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:co_lnotab is deprecated, use co_lines instead:DeprecationWarning"
]
